Adição arquivo properties

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   	<dependency>
   		<groupId>com.isolate.framework</groupId>
   		<artifactId>web</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
+  		<version>0.0.1</version>
   	</dependency>
   </dependencies>
 </project>
